<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Translate</string>
    <string name="translating">Translating</string>
    <string name="smart_translate">Smart Translate</string>
    <string name="text_translation">Text Translation</string>
    <string name="over_100_languages">Over 100 Languages</string>
    <string name="image_to_text">Image to Text</string>
    <string name="document_scanner">Document Scanner</string>
    <string name="photo_translation">Photo Translation</string>
    <string name="ocr">OCR</string>
    <string name="auto_detect">Auto Detect</string>
    <string name="choose_language">Choose Language</string>
    <string name="sorry_translation_failed">Sorry, Translation Failed</string>
    <string name="try_again">Try Again</string>
    <string name="version">Version 1.0</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="smart_server">Smart Server</string>
    <string name="enter_here">Enter Your Text Here</string>
    <string name="translate">Translate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="downloading">Downloading</string>

</resources>